trying to fix video on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh !important;
 }
 
 .home-body {
